join and leave lobby

--- a/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberOfPlayersInLobby">
@@ -113,7 +114,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailRG"
+        app:layout_constraintTop_toBottomOf="@+id/joinLobbyButton"
         tools:listitem="@layout/players_in_lobby_item_layout" />
 
     <Button
