clicking on player in lobby detail opens profile

--- a/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
+++ b/foottball-lobby/app/src/main/res/navigation/navigation_graph.xml
@@ -91,6 +91,9 @@
             android:name="lobbyUid"
             app:argType="string"
             android:defaultValue=""/>
+        <action
+            android:id="@+id/action_lobbyDetailsFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
     <action android:id="@+id/action_global_lobbyDetailsFragment" app:destination="@id/lobbyDetailsFragment" />
 </navigation>
