--- a/foottball-lobby/app/src/main/res/layout/fragment_login.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_login.xml
@@ -66,7 +66,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />
@@ -76,10 +76,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
         android:text="Forgot Password?"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/goToForgotPasswordBtn"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        app:layout_constraintBottom_toTopOf="@id/goToForgotPasswordBtn"/>
 
     <TextView
         android:id="@+id/goToForgotPasswordBtn"
@@ -89,9 +91,10 @@
         android:text="Click Here!"
         android:textColor="#2196F3"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/goToRegisterBtn"
@@ -101,19 +104,22 @@
         android:text="Register"
         android:textColor="#2196F3"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="30dp"
         android:text="New to Football Lobby?"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/goToRegisterBtn"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        app:layout_constraintBottom_toTopOf="@id/goToRegisterBtn"/>
 
     <TextView
         android:id="@+id/errorTxt"
