add friends to lobby

--- a/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
@@ -196,4 +196,15 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_send_24" />
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
