--- a/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
@@ -207,4 +207,15 @@
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/lobbyFullTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="The lobby is full! You can not join!"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/joinLobbyButton"
+        app:layout_constraintStart_toStartOf="@+id/joinLobbyButton"
+        app:layout_constraintTop_toTopOf="@+id/joinLobbyButton"
+        app:layout_constraintBottom_toBottomOf="@+id/joinLobbyButton"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
