--- a/foottball-lobby/app/src/main/res/layout/players_item_layout.xml
+++ b/foottball-lobby/app/src/main/res/layout/players_item_layout.xml
@@ -76,9 +76,20 @@
             android:layout_height="wrap_content"
             android:text="Kick"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/inviteToLobbyButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/chatButton"
+            app:layout_constraintTop_toTopOf="@+id/chatButton" />
+
+        <Button
+            android:id="@+id/inviteToLobbyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invite"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/kickFromLobbyButton"
             app:layout_constraintTop_toTopOf="@+id/chatButton" />
 
         <TextView
