--- a/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_lobby_details.xml
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Join Lobby"
+        android:text="Ask to join"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
