--- a/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <group android:id="@+id/notificationGroup">
+        <item
+            android:id="@+id/notificationScreenItem"
+            android:icon="@drawable/ic_baseline_notifications_24"
+            android:title="Notifications"
+            app:showAsAction="always" />
+    </group>
 
     <group android:id="@+id/profileGroup">
         <item
