Design on rate players dialog screen updated

--- a/foottball-lobby/app/src/main/res/layout/dialog_fragment_rate_players.xml
+++ b/foottball-lobby/app/src/main/res/layout/dialog_fragment_rate_players.xml
@@ -10,5 +10,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_marginLeft="15dp"/>
 </ScrollView>
