--- a/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/foottball-lobby/app/src/main/res/menu/top_app_bar_menu.xml
@@ -19,7 +19,8 @@
             android:title="Log out" />
         <item
             android:id="@+id/deleteProfileItem"
-            android:title="Delete Profile" />
+            android:title="Delete Profile"
+            android:visibility="gone" />
     </group>
     <group android:id="@+id/goToProfileGroup">
         <item
