--- a/foottball-lobby/app/src/main/res/layout/fragment_find_lobbies.xml
+++ b/foottball-lobby/app/src/main/res/layout/fragment_find_lobbies.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="Player Name"
+        android:hint="Creator Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/findLobbyByNameTextInputLayout">
